pages/movies/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: "Roboto", sans-serif;
    background-color: #f5f5f5;
}

#bg-video {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    object-fit: cover;
    z-index: -1; 
}

#video-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.4); 
    z-index: -1;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #0b1320;
    color: white;
    padding: 10px;
}

header .logo img {
    width: 70px;
    height: auto;
}

header .logo {
    margin-left: 20px;
}

header nav ul {
    margin-right: 20px;
    list-style: none;
    display: flex;
    gap: 20px;
}

header nav ul li a {
    color: white;
    text-decoration: none;
    font-size: 1.1rem;
}

header nav ul li a:hover {
    text-decoration: underline;
}

header nav ul li:last-child {
    margin-right: 20px;
}

header nav ul li a.active {
    color: white;
    font-weight: bold;
    border-bottom: 2px solid white;
    transition: 0.3s ease-in-out;
}

.movie-section {
    margin: 40px auto;
    text-align: center;
}

.movie-section h2 {
    font-size: 2rem;
    margin-bottom: 20px;
    font-weight: bold;
}

.now-showing {
    color: red;
}

.coming-soon {
    color: white;
}

.movies {
    display: flex;
    justify-content: center;
    gap: 20px;
    flex-wrap: wrap;
}

.movie-card {
    background: white;
    border-radius: 10px;
    overflow: hidden;
    width: 220px;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
    text-align: center;
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    height: 100%; 
}

.movie-card img {
    width: 100%;
    height: 300px;
    object-fit: cover;
}

.movie-card h3 {
    font-size: 1.1rem;
    margin: 10px 0;
}

.movie-card p {
    font-size: 0.9rem;
    padding: 0 10px;
    color: #555;
    flex-grow: 1; 
    min-height: 50px; 
    display: flex;
    align-items: center;
    justify-content: center;
}

.buy-btn {
    display: block;
    text-align: center;
    text-decoration: none;
    background-color: red;
    color: white;
    padding: 10px;
    font-size: 1rem;
    width: 80%; 
    border-radius: 5px;
    font-weight: bold;
    margin-top: auto; 
}

.buy-btn:hover {
    background-color: darkred;
}

footer {
    background-color: #0b1320;
    color: white;
    text-align: center;
    padding: 20px;
}

